<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:background="@color/background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.clarinetmaster.gpacalculator.MainActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        tools:ignore="UselessParent">

        <TextView
            android:text="@string/enterGP"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/labelGP"
            android:textAlignment="center"
            android:textColor="@color/text"
            android:textSize="@dimen/label"
            android:textStyle="bold" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/inputGP"
            android:hint="@string/GPhint"
            android:background="#FFFFFF"
            android:textSize="@dimen/label" />

        <TextView
            android:text="@string/enterCA"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/labelCA"
            android:textAlignment="center"
            android:textColor="@color/text"
            android:textSize="@dimen/label"
            android:textStyle="bold" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/inputCA"
            android:hint="@string/CAHint"
            android:background="#FFFFFF"
            android:textSize="@dimen/label" />

        <Button
            android:text="@string/submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button" />
    </LinearLayout>
</RelativeLayout>
